--- a/application/views/default/admin/users.phtml
+++ b/application/views/default/admin/users.phtml
@@ -1,5 +1,4 @@
 
-
 <div class="left">
 
 	<div class="content">
@@ -12,7 +11,7 @@
 
 		<div class="row">
 		  	<div class="span12">
-		    	<?php echo $this->paginator($this->data, true); ?>
+		    	<?php echo $this->pager($this->data->pager(), 'partials/pager/text_only.phtml'); ?>
 		  	</div>
 		</div>
 
@@ -31,7 +30,7 @@
 			          </tr>
 			        </thead>
 			        <tbody>
-			        <?php foreach($this->data->dataset AS $key=>$value){ ?>
+			        <?php foreach($this->data->rows() AS $key=>$value){ ?>
 			        <tr>
 			            <td><?php echo $value['user_id']; ?></td>
 			            <td><?php echo $value['username']; ?></td>
@@ -47,7 +46,7 @@
 			          </tbody>
 			      </table>
 
-			     <?php echo $this->paginator($this->data); ?>
+			     <?php echo $this->pager($this->data->pager(), 'partials/pager/pager.phtml'); ?>
 		  	</div>
 
 
