fixed a bug with adding record

--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -1,3 +1,10 @@
+<?php
+$row = array();
+if($this->data){
+	$row = $this->data->row();
+}
+?>
+
 <div class="left" style="width:20%;">
 
 	<div class="content">
