--- a/application/views/default/admin/posts.phtml
+++ b/application/views/default/admin/posts.phtml
@@ -37,7 +37,7 @@
 			            <th class="header" rel="category.category_id">Category</th>
 			            <th class="header" rel="p.subject">Subject</th>
 			            <th class="header" rel="p.created">Created</th>
-			            <th>Action</th>
+			            <th width="150">Action</th>
 			          </tr>
 			        </thead>
 			        <tbody>
