adding sign-in featuers

--- a/application/layouts/scripts/admin.phtml
+++ b/application/layouts/scripts/admin.phtml
@@ -40,8 +40,8 @@
             <li>
             	<a href="#" class="dropdown-toggle">Users</a>
 	            <ul class="dropdown-menu">
-	              	<li><a href="/admin/users">List</a></li>
-	                <li><a href="/admin/userlevels">Levels</a></li>
+	              	<li><a href="/admin/users">List users</a></li>
+	                <li><a href="/admin/userroles">List user roles</a></li>
 	            </ul>
             </li>
             <li><a href="/admin/posts">Posts</a></li>
