--- a/application/layouts/scripts/adventure.phtml
+++ b/application/layouts/scripts/adventure.phtml
@@ -170,6 +170,7 @@ var twitter_id = "<?php echo TWITTER_ID; ?>";
 						</li>-->
 						<li><a href="/blog">Blog</a></li>
 						<li><a href="/contact">Contact Us</a></li>
+						<li><a href="/auth/login">Sign in</a></li>
 						<li>
 						<fieldset class="search-place">
 							<form class='search_blog' action="/blog/search" method="get">
