--- a/application/views/default/error/error.phtml
+++ b/application/views/default/error/error.phtml
@@ -1,12 +1,9 @@
-<div class="content">
-	<div class="page-header">
-	  <h1>WTF? <small>Some problem occurred ...</small></h1>
-	</div>
-	<div class="row">
-	  <div class="span10">
-	    <p>
-	    	Please contact the site developer
-	    </p>
-	  </div>
+<div>
+	<div class="page-header content" style="width: 90%;">
+	  <h1>Uh oh, you've encountered an error...</h1>
 	</div>
 </div>
+
+<div class="clear" style="clear: both;padding-bottom:20px;"></div>
+
+<p><?php echo $this->error; ?></p>
