--- a/application/layouts/scripts/adventure.phtml
+++ b/application/layouts/scripts/adventure.phtml
@@ -95,6 +95,13 @@ var twitter_id = "<?php echo TWITTER_ID; ?>";
 <script type="text/javascript" src="/js/openid-jquery.js"></script>
 <script type="text/javascript" src="/js/openid-en.js"></script>
 
+<!-- jien -->
+<script src="/js/jien.js" type="text/javascript"></script>
+
+<!-- plugins -->
+<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
+
 
 </head>
 <body>
@@ -120,8 +127,9 @@ if($flash){
 
 
 </script>
-<?php
 
+<?php
+//Jien::debug($this->user);
 ?>
 
 <div id="wrapper">
@@ -205,7 +213,7 @@ if($flash){
 						</li>-->
 						<li><a href="/blog">Blog</a></li>
 						<li><a href="/contact">Contact Us</a></li>
-						<?php if($this->me){ ?>
+						<?php if($this->user){ ?>
 						<li><a href="/user/logout">Logout</a></li>
 						<?php }else{ ?>
 						<li><a href="/user/login">Sign in</a></li>
@@ -317,6 +325,54 @@ if($flash){
 	</div>
 </div>
 </div>
+
+<script>
+// login event
+$(document).ready(function(){
+	$('#login_form').submit(function(e){
+		e.preventDefault();
+		var form = jien.util.serializeForm($(this));
+		$.post("/auth/login", form, function(res){
+			if(res.status.code == 200){
+				$().toastmessage('showSuccessToast', 'Success');
+				window.location.href = form.redir;
+			}else{
+				$().toastmessage('showErrorToast', res.result.msg);
+				$('#login_form input[name='+res.result.focus+']').focus();
+			}
+		});
+	});
+
+	$('#register_form').submit(function(e){
+		e.preventDefault();
+		var form = jien.util.serializeForm($(this));
+		$.post("/auth/register", form, function(res){
+			if(res.status.code == 200){
+				$().toastmessage('showSuccessToast', 'Success');
+				window.location.href = form.redir;
+			}else{
+				$().toastmessage('showErrorToast', res.result.msg);
+				$('#register_form input[name='+res.result.focus+']').focus();
+			}
+		});
+	});
+
+	$('#user_login_show').click(function(e){
+		$('.login_register_show').hide();
+		$('.login_register').hide();
+		$('#user_register_show').show();
+		$('#user_login').show();
+	});
+
+	$('#user_register_show').click(function(e){
+		$('.login_register_show').hide();
+		$('.login_register').hide();
+		$('#user_login_show').show();
+		$('#user_register').show();
+	});
+
+});
+</script>
 </body>
 <!--BODY ENDS  -->
 </html>
