jien-61 added user login page

--- a/application/views/adventure/user/login.phtml
+++ b/application/views/adventure/user/login.phtml
@@ -42,11 +42,11 @@
 				</fieldset>
 				<fieldset>
 					<label>Password<span class="required">*</span></label>
-					<input type="text" name="password" id="password" value="" class="text requiredField subject"/>
+					<input type="password" name="password" id="password" value="" class="text requiredField subject"/>
 				</fieldset>
 				<fieldset>
 					<label>Password (Again)<span class="required">*</span></label>
-					<input type="text" name="password2" id="password2" value="" class="text requiredField subject"/>
+					<input type="password" name="password2" id="password2" value="" class="text requiredField subject"/>
 				</fieldset>
 				<br>
 				<fieldset>
@@ -65,7 +65,7 @@
 				</fieldset>
 				<fieldset>
 					<label>Password<span class="required">*</span></label>
-					<input type="text" name="password" id="login_password" value="" class="text requiredField subject"/>
+					<input type="password" name="password" id="login_password" value="" class="text requiredField subject"/>
 				</fieldset>
 				<br>
 				<fieldset>
