--- a/application/views/default/admin/pages.phtml
+++ b/application/views/default/admin/pages.phtml
@@ -24,9 +24,10 @@
 			        <thead>
 			          <tr>
 			            <th class="header" rel="page.page_id">#</th>
-			            <th class="header" rel="page.url">Url</th>
+			            <th class="header" rel="page.rank">Rank</th>
 			            <th class="header" rel="page.title">Title</th>
-			            <th class="header" rel="page.content">Content</th>
+			            <th class="header" rel="page.permalink">Permalink</th>
+			            <th class="header" rel="page.src">Src</th>
 			            <th class="header" rel="page.created">Created</th>
 			            <th class="header">Action</th>
 			          </tr>
@@ -35,9 +36,10 @@
 			        <?php foreach($this->data->rows() AS $key=>$value){ ?>
 			        <tr>
 			            <td><?php echo $value['page_id']; ?></td>
-			            <td><?php echo $value['url']; ?></td>
+			            <td><?php echo $value['rank']; ?></td>
 			            <td><?php echo $value['title']; ?></td>
-			            <td><?php echo $value['content']; ?></td>
+			            <td><?php echo $value['permalink']; ?></td>
+			            <td><?php echo $value['src']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
 			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value[strtolower($this->model).'_id']; ?>" class="btn blue">Edit</a>
