--- a/application/views/default/user/login.phtml
+++ b/application/views/default/user/login.phtml
@@ -19,16 +19,7 @@
 <!-- COLUMNS CONTAINER ENDS-->
 <div class="one">
 	<div class="one-fourth">
-		<ul class="simple-nav">
-			<li><a href="about-us.html"  class="current">About Us</a></li>
-			<li><a href="news.html">News Archive</a></li>
-			<li><a href="services.html">Our Services</a></li>
-			<li><a href="our-team.html">Our Team</a></li>
-			<li><a href="testimonials.html">Clients Testimonials</a></li>
-			<li><a href="jobs.html">Job Opportunities</a></li>
-			<li><a href="faq.html">F.A.Q</a></li>
-			<li><a href="404-Error.html">404 Error Page</a></li>
-		</ul>
+		<?php echo $this->partial('partials/pages.phtml'); ?>
 	</div>
 	<div class="inner-content last">
 
