--- a/application/views/old/admin/page.phtml
+++ b/application/views/old/admin/page.phtml
@@ -1,26 +1,3 @@
-<?php
-?>
-<div class="left" style="width:20%;">
-
-	<div class="content">
-
-		<div>
-			<h4><a href="/admin/categories"><-- Back to categories</a></h4>
-		</div>
-
-		<div class="row">
-		  <div class="span10">
-		  	<ul class="content_menu menu">
-		  		<!-- <li><a href="#basic_info">Basic <?php echo strtolower($this->model); ?> info</a></li> -->
-		  	</ul>
-
-		  </div>
-		</div>
-
-	</div>
-
-</div>
-
 <div class="left">
 
 	<div class="content">
@@ -36,38 +13,47 @@
 		</div>
 
 		<div class="row">
-		  	<div class="span12">
+		  	<div class="">
 		  		<form class="trig_save" action="/admin/data" method="POST">
 		  			<input type="hidden" name="model" value="<?php echo $this->model; ?>">
 		  			<input type="hidden" name="id" value="<?php echo $this->params('id'); ?>">
-
+		  			<input type="hidden" name="user_id" value="<?php echo $this->data->row('user_id') ? $this->data->row('user_id') : $_SESSION['user']->user_id; ?>">
 			        <fieldset>
 
 						<legend><a name="basic_info"></a> Basic info</legend>
 
 						<div class="clearfix">
-							<label for="xlInput">Type</label>
+							<label for="xlInput">Title</label>
 							<div class="input">
-								<input class='large disabled' name='type' value="<?php echo $this->params('type') != '' ? $this->params('type') : ($this->data->row('type') ? $this->data->row('type') : 'Post'); ?>" type='text'>
+								<input class='xxlarge' name='title' value="<?php echo $this->data->row('title') ? $this->data->row('title') : ''; ?>" type='text'>
 							</div>
 						</div>
 
 						<div class="clearfix">
-							<label for="xlInput">Parent</label>
+							<label for="xlInput">Permalink</label>
 							<div class="input">
-								<select name='parent_id'>
-									<?php echo $this->CategoryDropdown($this->params('type', $this->data->row('type')), $this->data->row('parent_id') ? $this->data->row('parent_id') : $this->params('category_id')); ?>
+								<input class='xxlarge' name='permalink' value="<?php echo $this->data->row('permalink') ? $this->data->row('permalink') : ''; ?>" type='text'>
+							</div>
+						</div>
+
+						<div class="clearfix">
+							<label for="xlInput">Source (file or db)</label>
+							<div class="input">
+								<select name="src">
+									<?php echo $this->dropdownOptions(array(
+										"file"	=>	"file",
+										"content"	=>	"content",
+									), $this->data->row('src'), 'file'); ?>
 								</select>
 							</div>
 						</div>
 
 						<div class="clearfix">
-							<label for="xlInput">Category</label>
+							<label for="xlInput">Content</label>
 							<div class="input">
-								<input class='large' name='category' value="<?php echo $this->data->row('category') ? $this->data->row('category') : ''; ?>" type='text'>
+								<textarea name="content" rows='225' class='xxlarge wysiwyg' style="width:90%;"><?php echo $this->data->row('content') ? $this->data->row('content') : ''; ?></textarea>
 							</div>
 						</div>
-
 
 			        </fieldset>
 
