--- a/application/views/old/admin/roles.phtml
+++ b/application/views/old/admin/roles.phtml
@@ -1,4 +1,4 @@
-<?php
+<?
 ?>
 
 <div class="left">
@@ -7,7 +7,7 @@
 
 		<div class="page-header">
 			<h3>
-		  		Listing all <?php echo $this->model; ?>s <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>?type=<?php echo $this->params('type'); ?>'>Add a <?php echo strtolower($this->model); ?></a></span>
+		  		Listing all Roles <small></small> <span class='right'><a href='/admin/<?php echo strtolower($this->model); ?>'>Add a role</a></span>
 		  	</h3>
 		</div>
 
@@ -19,37 +19,24 @@
 
 		<div class="row">
 		  	<div class="span15">
-				<div>
-					<p>
-						By Type:
-						<select class="filter dropdown" rel="type">
-							<?php echo $this->dropdownOptions(array(
-								"",
-								"Post"	=>	"Post",
-							), $this->params('type', 'Post'));
-							?>
-						</select>
-					</p>
-				</div>
-		  		<table>
+
+		  		<table class="zebra-striped">
 			        <thead>
 			          <tr>
-			            <th class="header" rel="category.category_id">#</th>
-			            <th class="header" rel="category.type">Type</th>
-			            <th class="header" rel="category.category">Category</th>
-			            <th class="header" rel="category.created">Created</th>
+			            <th class="header" rel="role.role_id">#</th>
+			            <th class="header" rel="role.role">Role</th>
+			            <th class="header" rel="role.created">Created</th>
 			            <th class="header">Action</th>
 			          </tr>
 			        </thead>
 			        <tbody>
 			        <?php foreach($this->data->rows() AS $key=>$value){ ?>
 			        <tr>
-			            <td><?php echo $value['category_id']; ?></td>
-			            <td><?php echo $value['type']; ?></td>
-			            <td><?php echo $value['category']; ?></td>
+			            <td><?php echo $value['role_id']; ?></td>
+			            <td><?php echo $value['role']; ?></td>
 			            <td><?php echo date("m/d/y", strtotime($value['created'])); ?></td>
 			            <td>
-			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value[strtolower($this->model).'_id']; ?>" class="btn blue">Edit</a>
+			            	<a href="/admin/<?php echo strtolower($this->model); ?>/id/<?php echo $value['role_id']; ?>" class="btn blue">Edit</a>
 			            	<a href="/admin/delete/?model=<?php echo $this->model; ?>&id=<?php echo $value[strtolower($this->model).'_id'];; ?>" class="btn red trig_delete" rel="model=<?php echo $this->model; ?>|id=<?php echo $value[$this->primary]; ?>">Remove</a>
 			            </td>
 			          </tr>
