jien-41 social sharing

--- a/application/layouts/scripts/my.phtml
+++ b/application/layouts/scripts/my.phtml
@@ -48,6 +48,7 @@ var disqus_developer = 1;
 <script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
 <link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
 
+<script type="text/javascript">var switchTo5x=true;</script><script type="text/javascript" src="http://w.sharethis.com/button/buttons.js"></script><script type="text/javascript">stLight.options({publisher:'467721af-6431-4c3f-be47-2e80a05eff2c'});</script>
 
 </head>
 <body>
