--- a/application/views/default/blog/index.phtml
+++ b/application/views/default/blog/index.phtml
@@ -19,6 +19,9 @@
 								<p>
 									 Posted by: <a href="/user/profile/id/<?php echo $row['user_id']; ?>"><?php echo $row['username']; ?></a> on <?php echo date("F, d, Y", strtotime($row['created'])); ?> | <a href="/blog/post/id/<?php echo $row['post_id']; ?>#disqus_thread">Loading ...</a>
 								</p>
+
+								<p><span  class='st_twitter_hcount' displayText='Tweet'></span><span  class='st_facebook_hcount' displayText='Facebook'></span></p>
+
 								<!--POST DETAILS-->
 								<!--POST INTRO-->
 								<p>
@@ -29,6 +32,8 @@
 									 <div style="clear:both;"></div>
 								</p>
 								<a href="/blog/post/id/<?php echo $row['post_id']; ?>">Read This Article</a>
+
+
 
 								<!--POST LINK-->
 								<div class="horizontal-line">
