--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -1,4 +1,4 @@
-
+<!--
 <div class="left" style="width:20%;">
 
 	<div class="content">
@@ -18,7 +18,7 @@
 
 	</div>
 
-</div>
+</div>-->
 
 <div class="left">
 
