resized blog admin page

--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -52,7 +52,7 @@
 						<div class="clearfix">
 							<label for="xlInput">Message</label>
 							<div class="input">
-								<textarea name="message" rows='5' class='xxlarge wysiwyg'><?php echo $this->data->row('message') ? $this->data->row('message') : ''; ?></textarea>
+								<textarea name="message" rows='5' class='xxlarge wysiwyg' style='width:90%;'><?php echo $this->data->row('message') ? $this->data->row('message') : ''; ?></textarea>
 							</div>
 						</div>
 
