resized blog admin page

--- a/application/views/default/admin/post.phtml
+++ b/application/views/default/admin/post.phtml
@@ -14,7 +14,7 @@
 		</div>
 
 		<div class="row">
-		  	<div class="span12">
+		  	<div>
 		  		<form class="trig_save" action="/admin/data" method="POST">
 		  			<input type="hidden" name="model" value="<?php echo $this->model; ?>">
 		  			<input type="hidden" name="id" value="<?php echo $this->params('id'); ?>">
