--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -1,57 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="utf-8"/>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <title><?php echo $this->title; ?></title>
 
-<!--CSS FILES STARTS-->
-<link rel="shortcut icon" type="image/gif" href="/themes/adventure/images/favicon.gif"/>
-<link rel="stylesheet" href="/themes/adventure/css/prettyPhoto.css" type="text/css" media="screen"/>
-<link rel="stylesheet" href="/themes/adventure/css/nivo-slider.css" type="text/css" media="screen"/>
-<link rel="stylesheet" id="skins-switcher" href="/themes/adventure/css/style.css" type="text/css" media="screen"/>
+<link href="/css/main.css" rel="stylesheet" type="text/css" />
+<link href="/css/home.css" rel="stylesheet" type="text/css" />
 
-<!--JS FILES STARTS-->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.6.4/jquery.min.js" type="text/javascript"></script>
+<script type="text/javascript" src="/js/cufon-yui.js"></script>
+<script type="text/javascript" src="/js/HelveticaSTDBlackCondensed.js"></script>
+<script type="text/javascript" src="/js/HelveticaSTDLightCondensed.js"></script>
+<script type="text/javascript" src="/js/main.js"></script>
+<script type="text/javascript" src="/js/slider.js"></script>
 <script>
 var twitter_id = "<?php echo TWITTER_ID; ?>";
 var disqus_shortname = '<?php echo DISQUS_ID; ?>';
-<?php if(APPLICATION_ENV != 'prod'){ ?>
-var disqus_developer = 1;
-<?php } ?>
-
 </script>
-<script type="text/javascript" src="/themes/adventure/js/jquery.min.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/custom.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/slides/slides.min.jquery.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/cycle-slider/cycle.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/nivo-slider/jquery.nivo.slider.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/tabify/jquery.tabify.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/prettyPhoto/jquery.prettyPhoto.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/twitter/jquery.tweet.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/scrolltop/scrolltopcontrol.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/portfolio/filterable.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/modernizr/modernizr-2.0.3.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/easing/jquery.easing.1.3.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
-<script type="text/javascript" src="/themes/adventure/js/swfobject/swfobject.js"></script>
-<link rel="stylesheet" href="/js/plugins/gritter/css/gritter.css" type="text/css" media="screen"/>
-<script type="text/javascript" src="/js/plugins/gritter/jquery.gritter.min.js"></script>
-
-<!--auth -->
-<link rel="stylesheet" href="/css/openid.css" type="text/css" media="screen"/>
-<script type="text/javascript" src="/js/openid-jquery.js"></script>
-<script type="text/javascript" src="/js/openid-en.js"></script>
-
-<!-- jien -->
-<script src="/js/jien.js" type="text/javascript"></script>
-
-<!-- plugins -->
-<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
-<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
-
 
 </head>
-<body>
 
+<body>
 
 <script>
 $ = jQuery;
@@ -70,144 +39,34 @@ if($flash){
 	return false;
 <?php } ?>
 });
-
-
 </script>
 
-<?php
-//Jien::debug($this->user);
-?>
 
 <div id="wrapper">
-	<div class="center">
-		<div id="container">
-			<!--WRAPPER-->
-			<div id="header">
-				<!-- HEADER  -->
-				<!-- LOGO -->
-				<a id="logo" title="Homepage" href="/"><img src="/themes/adventure/images/logo.png" alt=" " width="220" height="60"/></a>
-				<!--LOGO ENDS  -->
 
-				<div id="main_navigation" class="main-menu ">
-					<!--  MAIN  NAVIGATION-->
-					<ul>
-						<li><a href="/" title="Home">Home</a></li>
-						<li><a href="/page/about" title="About">About</a></li>
-						<li><a href="/blog">Blog</a></li>
-						<li><a href="/contact">Contact Us</a></li>
-						<?php if($this->user){ ?>
-						<li><a href="/user/logout">Logout</a></li>
-						<?php }else{ ?>
-						<li><a href="/user/login">Sign in</a></li>
-						<?php } ?>
-						<li>
-						<fieldset class="search-place">
-							<form class='search_blog' action="/blog/search" method="get">
-								<input name="keyword" class="search-input" type="text" onblur="if(this.value=='')this.value='Type and hit enter';" onfocus="if(this.value=='Type and hit enter')this.value='';" value="<?php echo $this->params('keyword', 'Type and hit enter'); ?>"/>
-							</form>
-						</fieldset>
-						</li>
-					</ul>
-				</div>
-
-				<!-- MAIN NAVIGATION ENDS-->
-			</div>
-			<!-- HEADER ENDS-->
-
-			<!-- MAIN CONTAINER -->
-			<?php
-				echo $this->layout()->content;
-			?>
-			<!-- MAIN CONTAINER ENDS -->
-
-
-			<!-- FOOTER STARTS -->
-				<div id="footer-wrapper">
-					<!-- FOOTER WRAPPER STARTS-->
-					<div id="footer-container">
-						<!-- FOOTER CONTAINER STARTS-->
-						<div id="footer">
-							<!-- FOOTER STARTS-->
-							<div class="one">
-								<!-- COLUMN CONTAINER STARTS-->
-								<div class="one-fourth">
-									<!-- COLUMN STARTS-->
-									<h4>About Us</h4>
-									<p>
-										 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia. Quaere allocutus ait regem ut sua etiam quantitas non solutionem invenisti. Venis potest flens ibidem quod eam in. Ambo una litus vita Apolloni codicellos iam.
-									</p>
-								</div>
-								<!-- COLUMN ENDS-->
-								<div class="one-fourth">
-									<!-- COLUMN STARTS-->
-									<h4>Latest Posts</h4>
-									<ul>
-									<?php
-
-									// get latest posts
-									$latestPosts = Jien::model("Post")->byLatest()->limit(2)->get()->rows();
-										foreach($latestPosts AS $post){
-									?>
-										<!-- LATEST POSTS UL-->
-										<li>
-										<a href="/blog/post/id/<?php echo $post['post_id']; ?>"><?php echo $post['subject']; ?></a>
-										<p>
-											 <?php echo date("F d, Y", strtotime($post['created'])); ?> · <a href="/blog/post/id/<?php echo $post['post_id']; ?>#disqus_thread">Loading ...</a>
-										</p>
-										</li>
-									<?php } ?>
-									</ul>
-									<!--END UL-->
-								</div>
-								<!-- COLUMN ENDS-->
-								<div class="one-fourth">
-									<!-- COLUMN STARTS-->
-									<h4>Stay in Touch</h4>
-									<ul class="social-links">
-										<!-- SOCIAL LINKS STARTS-->
-										<li><img src="/themes/adventure/images/icons/facebook.png" width="16" height="16" alt="#"/><a href="#">Our Facebook page</a></li>
-										<li><img src="/themes/adventure/images/icons/twitter.png" width="16" height="16" alt="#"/><a href="http://www.twitter.com/<?php echo TWITTER_ID; ?>" target="_BLANK">Follow us on Twitter</a></li>
-										<li><img src="/themes/adventure/images/icons/rss.png" width="16" height="16" alt="#"/><a href="#">Our RSS Feeds</a></li>
-										<li><img src="/themes/adventure/images/icons/vimeo.png" width="16" height="16" alt="#"/><a href="#">Our Vimeo Videos</a></li>
-									</ul>
-									<!-- SOCIAL LINKS ENDS-->
-								</div>
-								<!-- COLUMN ENDS-->
-								<div class="one-fourth last">
-									<!-- COLUMN STARTS-->
-									<h4>Latest Tweets</h4>
-									<div class="tweet">
-									</div>
-								</div>
-								<!-- COLUMN ENDS-->
-							</div>
-							<!-- COLUMN CONTAINER ENDS-->
-						</div>
-						<!-- FOOTER ENDS-->
-					</div>
-					<!-- FOOTER CONTAINER ENDS-->
-				</div>
-				<!-- FOOTER WRAPPER ENDS-->
-
-				<div id="copyright-wrapper">
-					<!-- COPYRIGHTS WRAPPER STARTS-->
-					<div id="copyright">
-						<a id="copyright-logo" title="Homepage" href="#"><img src="/themes/adventure/images/logo-bottom.png" alt=" " width="185" height="50"/></a>
-						<div class="right">
-							<p>
-								<a href="#">Home</a> / <a href="#">Features</a> / <a href="#">Pages</a> / <a href="#">Portfolio</a> / <a href="#">Blog</a> / <a href="#">Typography &amp; Columns</a> / <a href="#">Contact</a>
-							</p>
-							<span>© Copyright 2011. All rights reserved. Template created by:<a href="http://themeforest.net/user/trendyWebStar">trendyWebStar</a></span>
-						</div>
-					</div>
-					<!-- COPYRIGHTS ENDS-->
-				</div>
-				<!-- COPYRIGHTS WRAPPER ENDS-->
-			</div>
-		</div>
-	</div>
-</div>
-</div>
+	<div id="header">
+    	<a href="/" id="logo"></a>
+        <div id="login"><a href="">LOGIN</a>&nbsp;&nbsp;&nbsp;&nbsp;<a href="">HELP</a></div>
+        <div id="menu">
+        	<a href="">ABOUT</a>&nbsp;&nbsp;/&nbsp;
+            <a href="battle.html">BATTLE</a>&nbsp;&nbsp;/&nbsp;
+            <a href="">LEARN</a>&nbsp;&nbsp;/&nbsp;
+            <a href="">OUR LADIES</a>
+        </div>
+    </div>
+    
+	<?php
+		echo $this->layout()->content;
+	?>
+	
+	
+    <div style="clear: both"></div>
+    
+    <div id="footer">
+        <div id="footer-logo"></div>
+    </div>
+    
+</div><!-- #wrapper -->
 
 <script>
 // login event
@@ -257,19 +116,5 @@ $(document).ready(function(){
 });
 </script>
 
-<script type="text/javascript">
-
-/* * * DON'T EDIT BELOW THIS LINE * * */
-(function () {
-    var s = document.createElement('script'); s.async = true;
-    s.type = 'text/javascript';
-    s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
-    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-}());
-</script>
-
 </body>
-<!--BODY ENDS  -->
 </html>
-<!--HTML ENDS  -->
-<!--Copyright by trendyWebStar  -->
