--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<title>?php echo $this->title; ?></title>
+<title><?php echo $this->title; ?></title>
 
 <link href="/css/main.css" rel="stylesheet" type="text/css" />
 
