--- a/application/views/default/index/index.phtml
+++ b/application/views/default/index/index.phtml
@@ -1,153 +1,138 @@
-			<div id="content">
-				<div class="one">
-			<div class="slideshow">
-				<div id="slides">
-				<div id="slider-big">
-							<div class="slides_container big-slider">
-								<!-- SLIDER STARTS-->
-								<!-- SLIDER CONTENT STARTS-->
-								<img src="/themes/adventure/images/slideshow/slide-02.jpg" alt=" " width="950" height="350"/>
-								<div class="slide">
-									<img src="/themes/adventure/images/slideshow/slide-03.jpg" alt=" " width="950" height="350"/>
-									<div class="caption">
-										<p>Your Caption Goes Here!</p>
-									</div>
-								</div>
-								<img src="/themes/adventure/images/slideshow/slide-01.jpg" alt=" " width="950" height="350"/>
-							</div>
-							<!-- SLIDESHOW CONTAINER ENDS-->
+    <ul id="avatars">
+    	<li><a href=""><img src="images/avatars/ava1.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava2.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava3.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava4.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava5.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava6.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava7.jpg" /></a></li>
+        <li><a href=""><img src="images/avatars/ava8.jpg" /></a></li>
+        <div style="clear: both"></div>
+        These ladies are on TPX, you should be too!
+    </ul>
+    
+    <a href="#" id="create-account">Create an Account</a>
+    <div style="clear:both"></div>
+
+    <div id="slideshow">
+    
+    <div id="slidesContainer">
+        <div class="slide"><img src="images/slider/1.jpg" /></div>
+        <div class="slide"><img src="images/slider/2.jpg" /></div>
+        <div class="slide"><img src="images/slider/3.jpg" /></div>
+    </div>
+    
+    <div id="slidesContainer2">
+        <div class="slide2"><img src="images/slider/thumbs/1.jpg" /></div>
+        <div class="slide2"><img src="images/slider/thumbs/2.jpg" /></div>
+        <div class="slide2"><img src="images/slider/thumbs/3.jpg" /></div>     
+    </div>
+    
+    <div id="slidesContainer3">
+        <div class="slide3">
+			<div class="slidesContainer3-bg"></div>
+        	<div class="slide3-title">Guys Ask, Ladies Answer</div>
+            <div class="slide3-desc">Learn</div>
+        </div>  
+        <div class="slide3">
+    	    <div class="slidesContainer3-bg"></div>
+        	<div class="slide3-title">Guys Ask, Ladies Answer 2</div>
+            <div class="slide3-desc">Learn</div>
+        </div> 
+        <div class="slide3">
+			<div class="slidesContainer3-bg"></div>
+        	<div class="slide3-title">Guys Ask, Ladies Answer 3</div>
+            <div class="slide3-desc">Learn</div>
+        </div> 
+    </div>
+    
+    </div><!-- #slideshow -->
+    
+    <div id="home-questions">
+    	<div class="home-question-cont">
+        	<div class="home-question-top">
+            	Join the conversation...
+                <div class="home-question-date">September 15, 2011</div>
+            </div>
+            <div class="home-question">Would you sell your panties if the money was going to a good cause?</div>
+        </div>
+        <div class="home-question-bottom">
+        	<div class="home-question-stat">7<div class="home-question-stat-text">Comments</div></div>
+            <div class="home-question-stat">26<div class="home-question-stat-text">Shared</div></div>
+            <div class="home-question-stat home-question-stat-last">52%<div class="home-question-stat-text">Comments</div></div>
+            <div class="home-question-answer">"YES"</div>
+            <div class="home-question-tweet"><a href="https://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></div>
+            <div class="home-question-facebook">
+            	<div id="fb-root"></div>
+				<script>(function(d, s, id) {
+                  var js, fjs = d.getElementsByTagName(s)[0];
+                  if (d.getElementById(id)) {return;}
+                  js = d.createElement(s); js.id = id;
+                  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+                  fjs.parentNode.insertBefore(js, fjs);
+                }(document, 'script', 'facebook-jssdk'));</script>
+                
+                <div class="fb-like" data-send="false" data-layout="button_count" data-width="100" data-show-faces="false"></div>
+            </div>
+        </div>
+    </div><!-- #home-questions -->
+	
+	<div id="questions-slideshow">
+		<div class="leftcol">
+			<ul>
+				<li><div class="cat1"><h3>Barcode</h3><p>Learn the Lingo</p></div></li>
+				<li><div class="cat2"><h3>The Frisky</h3><p>Dating / Sex</p></div></li>
+				<li><div class="cat3"><h3>Man Craft</h3><p>Grooming / Style</p></div></li>
+			</ul>
+		</div>
+		<div class="middlecol">
+			<ul>
+				<li class="cat1"><h3><span>Question:</span><p><strong>Does "I'm out" equal<br />"I'm trying to get laid"?</strong></p></h3><img src="images/layout/questions/barcode.jpg" /><div></div></li>
+				<li class="cat2"><h3><span>Question:</span><p><strong>Would you sell your panties if the money was going to a good cause?</strong></p></h3><img src="images/layout/questions/frisky.jpg" /><div></div></li>
+				<li class="cat3"><h3><span>Question:</span><p><strong>Are nerds the new rockstars or still just... nerds?</strong></p></h3><img src="images/layout/questions/mancraft.jpg" /><div></div></li>
+			</ul>
+		</div>
+		<div class="rightcol">
+			<ul>
+				<li class="cat1">
+					<div class="twitter-header">
+						<p><a href="">@THEPANTYEXCHANGE</a></p>
+						<h3>What She Said</h3>
+					</div>
+					<div class="tweet-cont">
+						<div class="tweet">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in molestie odio. With a link <a href="">http://tinyurl.com/5o77k</a>
+							<div class="tweet-date">October 1, 2011</div>
 						</div>
-						<div class="slides-nav">
-
-                    <a href="#" class="prev">Previous Slide</a>
-                    <a href="#" class="next">Next Slide</a>
-
-                <!--END .slides-nav -->
-            	</div>
-				</div>
-				</div><!-- SLIDER ENDS-->	<!-- SLIDESHOW ENDS-->
-			</div>
-				<div class="one">
-					<!-- COLUMNS CONTAINER STARTS-->
-					<div class="intro-pages">
-						<!-- INTRO DIV STARTS-->
-						<h3>Welcome to <span class="colored">Adventure</span>, Clean &amp; Simple <span class="colored">HTML5 </span> template.Feel free to browse through all the pages and see what's &quot;Adventure&quot; capable to do for You.Enjoy! </h3>
+						<div class="tweeter"><a href="" target="_blank" class="tweeter-avatar"><img src="images/avatars/ava10.jpg" /></a> <a href="" target="_blank" class="tweeter-name">Kate</a></div>
 					</div>
-					<!-- INTRO ENDS-->
-				</div>
-				<!-- COLUMNS CONTAINER ENDS-->
-
-
-
-
-
-
-				<div class="one">
-					<div class="one-third">
-						<img src="/themes/adventure/images/icons/idea.png" alt=" " class="img-align-left" width="66" height="66"/>
-						<div class="text-align-left">
-							<h4>Easy to Customize</h4>
-							<p>
-								Iuraveras magnifice ex auxilium super color est cum. Ripae simul navigat est amet constanter approximavit te.
-							</p>
+				</li>
+				<li class="cat2">
+					<div class="twitter-header">
+						<p><a href="">@THEPANTYEXCHANGE</a></p>
+						<h3>What She Said</h3>
+					</div>
+					<div class="tweet-cont">
+						<div class="tweet">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in molestie odio. With a link <a href="">http://tinyurl.com/5o77k</a>
+							<div class="tweet-date">October 1, 2011</div>
 						</div>
+						<div class="tweeter"><a href="" target="_blank" class="tweeter-avatar"><img src="images/avatars/ava11.jpg" /></a> <a href="" target="_blank" class="tweeter-name">Linda</a></div>
 					</div>
-					<div class="one-third">
-						<img src="/themes/adventure/images/icons/display.png" alt=" " class="img-align-left" width="66" height="66"/>
-						<div class="text-align-left">
-							<h4>Browsers Compatible</h4>
-							<p>
-								Iuraveras magnifice ex auxilium super color est cum. Ripae simul navigat est amet constanter approximavit te.
-							</p>
+				</li>
+				<li class="cat3">
+					<div class="twitter-header">
+						<p><a href="">@THEPANTYEXCHANGE</a></p>
+						<h3>What She Said</h3>
+					</div>
+					<div class="tweet-cont">
+						<div class="tweet">
+							Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc in molestie odio. With a link <a href="">http://tinyurl.com/5o77k</a>
+							<div class="tweet-date">October 1, 2011</div>
 						</div>
+						<div class="tweeter"><a href="" target="_blank" class="tweeter-avatar"><img src="images/avatars/ava12.jpg" /></a> <a href="" target="_blank" class="tweeter-name">Victoria</a></div>
 					</div>
-					<div class="one-third last">
-						<img src="/themes/adventure/images/icons/check-box.png" alt=" " class="img-align-left" width="66" height="66"/>
-						<div class="text-align-left">
-							<h4>Full Documentation</h4>
-							<p>
-								Iuraveras magnifice ex auxilium super color est cum. Ripae simul navigat est amet constanter approximavit te.
-							</p>
-						</div>
-					</div>
-					<div class="horizontal-line">
-					</div>
-				</div>
-				<div class="one">
-					<div class="one-fourth">
-						<p>
-							<a href="/themes/adventure/images/slideshow/slide-01.jpg" class="portfolio-item-preview" data-rel="prettyPhoto"><img src="/themes/adventure/images/portfolio/portfolio-img-04.jpg" alt=" " width="210" height="145" class="portfolio-img pretty-box"/></a>
-						</p>
-						<h4><a href="#">Awesome Design</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia.Amice suspiciosa mare non solutionem.
-						</p>
-						<a href="portfolio-four-columns.html">View entire Portfolio</a>
-					</div>
-					<div class="one-fourth">
-						<p>
-							<a href="/themes/adventure/images/slideshow/slide-01.jpg" class="portfolio-item-preview" data-rel="prettyPhoto"><img src="/themes/adventure/images/portfolio/portfolio-img-03.jpg" alt=" " width="210" height="145" class="portfolio-img pretty-box"/></a>
-						</p>
-						<h4><a href="#">Awesome Design</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia.Amice suspiciosa mare non solutionem.
-						</p>
-					</div>
-					<div class="one-fourth">
-						<p>
-							<a href="/themes/adventure/images/slideshow/slide-01.jpg" class="portfolio-item-preview" data-rel="prettyPhoto"><img src="/themes/adventure/images/portfolio/portfolio-img-01.jpg" alt=" " width="210" height="145" class="portfolio-img pretty-box"/></a>
-						</p>
-						<h4><a href="#">Awesome Design</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia.Amice suspiciosa mare non solutionem.
-						</p>
-					</div>
-					<div class="one-fourth last">
-						<p>
-							<a href="/themes/adventure/images/slideshow/slide-01.jpg" class="portfolio-item-preview" data-rel="prettyPhoto"><img src="/themes/adventure/images/portfolio/portfolio-img-02.jpg" alt=" " width="210" height="145" class="portfolio-img pretty-box"/></a>
-						</p>
-						<h4><a href="#">Wordpress logo</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia.Amice suspiciosa mare non solutionem.
-						</p>
-					</div>
-				</div>
-				<!-- COLUMNS CONTAINER ENDS-->
-				<div class="one">
-					<div class="horizontal-line">
-					</div>
-					<div class="one-fourth">
-						<!-- COLUMN STARTS-->
-						<h4><a href="#">Our Services &amp; More</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia. Quaere allocutus ait regem ut sua etiam quantitas non solutionem invenisti.
-						</p>
-					</div>
-					<!-- COLUMN ENDS-->
-					<div class="one-fourth">
-						<!-- COLUMN STARTS-->
-						<h4><a href="#">Web development</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia. Quaere allocutus ait regem ut sua etiam quantitas non solutionem invenisti.
-						</p>
-					</div>
-					<!-- COLUMN ENDS-->
-					<div class="one-fourth">
-						<!-- COLUMN STARTS-->
-						<h4><a href="#">Web Design</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia. Quaere allocutus ait regem ut sua etiam quantitas non solutionem invenisti.
-						</p>
-					</div>
-					<!-- COLUMN ENDS-->
-					<div class="one-fourth last">
-						<!-- COLUMN STARTS-->
-						<h4><a href="#">Web Hosting</a></h4>
-						<p>
-							 Lorem ipsum dolor sit amet, tollite fit manibus individuationis omnibus civitas ad quia. Quaere allocutus ait regem ut sua etiam quantitas non solutionem invenisti.
-						</p>
-
-					</div>
-					<!-- COLUMN ENDS-->
-					<div class="horizontal-line"></div>
-				</div>
+				</li>
+			</ul>
+		</div>
+	</div>
