--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -15,6 +15,7 @@
 <script type="text/javascript" src="/js/slider.js"></script>
 <script type="text/javascript" src="/js/openid-jquery.js"></script>
 <script type="text/javascript" src="/js/openid-en.js"></script>
+<script type="text/javascript" src="/js/jien.js"></script>
 
 <script>
 var twitter_id = "<?php echo TWITTER_ID; ?>";
