--- a/application/layouts/scripts/default.phtml
+++ b/application/layouts/scripts/default.phtml
@@ -16,6 +16,13 @@
 <script type="text/javascript" src="/js/openid-jquery.js"></script>
 <script type="text/javascript" src="/js/openid-en.js"></script>
 <script type="text/javascript" src="/js/jien.js"></script>
+<script type="text/javascript" src="/themes/adventure/js/easing/jquery.easing.1.3.js"></script>
+<script type="text/javascript" src="/themes/adventure/js/kwicks/jquery.kwicks-1.5.1.pack.js"></script>
+<script type="text/javascript" src="/themes/adventure/js/swfobject/swfobject.js"></script>
+<!-- plugins -->
+<script src="/js/plugins/toastmessage/jquery.toastmessage.js" type="text/javascript"></script>
+<link rel="stylesheet" href="/js/plugins/toastmessage/css/jquery.toastmessage.css">
+
 
 <script>
 var twitter_id = "<?php echo TWITTER_ID; ?>";
